--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
-spring.application.name=user-service
+# ======================
+# JWT Configuration
+# ======================
+spring.security.oauth2.resourceserver.jwt.secret-key=${JWT_SECRET:1234-1234-1234}
+spring.security.oauth2.resourceserver.jwt.authorities-claim-name=roles
+spring.security.oauth2.resourceserver.jwt.authority-prefix=ROLE_
+
+# ======================
+# Server Configuration
+# ======================
+server.port=8081
+
+# ======================
+# External Service URLs
+# ======================
+auth.service.url=http://localhost:8080
+
+# ======================
+# Logging Configuration
+# ======================
+logging.level.com.brainz.user_service=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# ======================
+# Actuator / Management
+# ======================
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# Optional: Disable Redis health check if unused
+# management.health.redis.enabled=false
