--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,14 @@ jobs:
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
     steps:
+      - name: "Fail if JWT_SECRET is missing"
+        run: |
+            if [ -z "$JWT_SECRET" ]; then
+              echo "❌ JWT_SECRET secret not found. Stopping workflow."
+              exit 1
+            fi
+          shell: bash
+
       - name: "Checkout code"
         uses: actions/checkout@v4
 
@@ -62,6 +70,13 @@ jobs:
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
     steps:
+      - name: "Fail if JWT_SECRET is missing"
+        run: |
+            if [ -z "$JWT_SECRET" ]; then
+              echo "❌ JWT_SECRET secret not found. Aborting deployment."
+              exit 1
+            fi
+          shell: bash
       - name: Deploy to develop server
         run: |
           echo "Buy aws server first..."
