--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.security.oauth2.resourceserver.jwt.authority-prefix=ROLE_
 # ======================
 server.port=8081
 
+# Admin setup
+admin.username=${Admin_USER_NAME:Admin}
+admin.password=${ADMIN_PASSWORD:admin1234}
+admin.name=${Admin_NAME:BrainZ}
+
 # ======================
 # External Service URLs
 # ======================
