feat(api): Api's developed and tested

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ======================
 # JWT Configuration
 # ======================
-spring.security.oauth2.resourceserver.jwt.secret-key=${JWT_SECRET:1234-1234-1234}
+spring.security.oauth2.resourceserver.jwt.secret-key=${JWT_SECRET:4f6G8z!s9yA3eL1pXpV2cNqTk9mBxZ3e}
 spring.security.oauth2.resourceserver.jwt.authorities-claim-name=roles
 spring.security.oauth2.resourceserver.jwt.authority-prefix=ROLE_
 
