fix:correct ci.yml on section

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,9 @@
 name: "CI/CD workflow"
 on:
   push:
-    branches:
-      - 'master'
-      - 'dev'
+    branches: ['master', 'dev']
   pull_request:
-    branches:
-      - 'master'
-      - 'dev'
+    branches: ['master', 'dev']
   workflow_dispatch:
 
 jobs:
