--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.security.oauth2.resourceserver.jwt.authority-prefix=ROLE_
 server.port=8081
 
 # Admin setup
-admin.username=${Admin_USER_NAME:Admin}
-admin.password=${ADMIN_PASSWORD:admin1234}
+admin.username=${Admin_USER_NAME:admin}
+admin.password=${ADMIN_PASSWORD:admin123}
 admin.name=${Admin_NAME:BrainZ}
 
 # ======================
