--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,4 +79,4 @@ jobs:
 
       - name: "Deploy to develop server"
         run: |
-          echo "Buy aws server first..."
+          echo "Buy aws server first.."
