--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         shell: bash
         run: |
           if [ -z "$JWT_SECRET" ]; then
-            echo "❌ JWT_SECRET secret not found. Stopping workflow."
+            echo "❌ JWT_SECRET secret not found. Stopping workflow"
             exit 1
           fi
 
