Refactor(Junior): BrainZ to Junior

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.security.oauth2.resourceserver.jwt.authority-prefix=ROLE_
 server.port=8081
 
 # Admin setup
-admin.username=${Admin_USER_NAME:admin}
-admin.password=${ADMIN_PASSWORD:admin123}
-admin.name=${Admin_NAME:BrainZ}
+admin.username=${Admin_USER_NAME:Junior}
+admin.password=${ADMIN_PASSWORD:junior123}
+admin.name=${Admin_NAME:Junior Ai}
 
 # ======================
 # External Service URLs
